Add comment about the first run

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,4 +15,6 @@ bind-key -T root M-Right next-window
 bind-key -T root M-Left previous-window
 
 # Set-up TPM
+# For the first run issue the following command:
+# prefix + I (capital!)
 run ~/work/git/github/tpm/tpm
