--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,8 @@ unbind C-b
 set -g prefix C-space
 
 setw -g mouse on
-# bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i"
+set -g set-clipboard on
+# bind-key -T copy-mode Enter send-keys -X copy-pipe-and-cancel "xclip -i -rmlastnl"
 
 bind-key -T root M-Right next-window
 bind-key -T root M-Left previous-window
