--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'arcticicestudio/nord-tmux'
 
 set -g default-terminal "xterm-256color"
+# https://github.com/tmux/tmux/issues/696
+# makes colors inside/outside of tmux the same
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 unbind C-b
 set -g prefix C-space
@@ -18,4 +21,4 @@ bind-key -T root M-Left previous-window
 # Set-up TPM
 # For the first run issue the following command:
 # prefix + I (capital!)
-run ~/work/git/github/tpm/tpm
+run ~/git/github/tpm/tpm
