Fix copy-paste for X11 in tmux and don't reset position after copy

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,10 +13,12 @@ set -g prefix C-space
 
 setw -g mouse on
 set -g set-clipboard on
-# bind-key -T copy-mode Enter send-keys -X copy-pipe-and-cancel "xclip -i -rmlastnl"
+bind-key -T copy-mode Enter send-keys -X copy-pipe-and-cancel "/usr/bin/xclip -selection primary -i -rmlastnl"
 
 bind-key -T root M-Right next-window
 bind-key -T root M-Left previous-window
+# Don't reset scroll position after selection
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
 
 # Set-up TPM
 # For the first run issue the following command:
